# robotarm_stm32f407

./: .mxproject  CMakeLists.txt  F407AS5600_2.ioc  PROTOCOL.md  README.md  robotarm_stm32f407.ioc
.claude/: settings.local.json
App/: app_calibration.c  app_gcode_exec.c  app_isr.h  app_runtime.c  app_teleop.c
App/adapters/: app_hardware_adapter.c  app_hardware_adapter.h  app_isr_adapter.h
App/include/: app_init.h
App/include/app/: app_gcode_parser.h
BSP/include/bsp/: bsp_uart1_config.h
Core/Inc/: app_teleop.h  bsp_as5600.h  bsp_gripper.h  bsp_homing.h  bsp_ps2.h  bsp_stepper.h  bsp_tmc2209.h  bsp_uart1.h  closed_loop.h  cmd_executor.h  common.h  gcode_parser.h  i2c.h  main.h  motion_planner.h  motor_core.h  robotGeometry.h  stm32f4xx_it.h  tim.h  usart.h
Core/Inc/app/: app_calibration.h  app_gcode_exec.h  app_gcode_parser.h  app_teleop.h
Core/Inc/bsp/: bsp_as5600.h  bsp_gripper.h  bsp_led.h  bsp_ps2.h  bsp_stepper.h  bsp_tmc2209.h  bsp_uart1.h
Core/Inc/common/: common.h  error_code.h  home_pose.h  robot_config.h  robot_home_pose.h  robot_math.h
Core/Inc/control/: ctrl_closed_loop.h  ctrl_compensation.h  ctrl_gripper.h  ctrl_kinematics.h  ctrl_motion_engine.h  ctrl_planner.h  ctrl_ps2.h
Core/Inc/device/: dev_gripper.h
Core/Inc/driver/: drv_as5600.h  drv_ps2.h  drv_tmc2209.h
Core/Inc/os/: os_adapter.h
Core/Inc/service/: svc_gripper.h  svc_homing.h
Core/Inc/service/control/: ctrl_closed_loop.h  ctrl_kinematics.h  ctrl_motion_engine.h  ctrl_planner.h
Core/Src/: app_teleop.c  bsp_as5600.c  bsp_gripper.c  bsp_homing.c  bsp_ps2.c  bsp_tmc2209.c  bsp_uart1.c  closed_loop.c  cmd_executor.c  common.c  gcode_parser.c  gpio.c  i2c.c  main.c  motion_planner.c  motor_core.c  robotGeometry.c  stm32f4xx_it.c  tim.c  usart.c
Core/Src/app/: app_calibration.c  app_gcode_exec.c  app_gcode_parser.c  app_teleop.c
Core/Src/bsp/: bsp_as5600.c  bsp_gripper.c  bsp_homing.c  bsp_led.c  bsp_ps2.c  bsp_tmc2209.c  bsp_uart1.c
Core/Src/common/: common.c  home_pose.c  robot_home_pose.c  robot_math.c
Core/Src/control/: ctrl_closed_loop.c  ctrl_compensation.c  ctrl_gripper.c  ctrl_kinematics.c  ctrl_motion_engine.c  ctrl_planner.c  ctrl_ps2.c
Core/Src/device/: dev_gripper.c  dev_input.c
Core/Src/driver/: drv_ps2.c  drv_stepper.c  drv_tmc2209.c
Core/Src/os/: os_adapter.c
Core/Src/service/: svc_gripper.c  svc_homing.c
Core/Src/service/control/: ctrl_closed_loop.c  ctrl_compensation.c  ctrl_kinematics.c  ctrl_motion_engine.c  ctrl_planner.c
Device/src/: dev_limit_switch.c
Domain/include/domain/: kinematics.h
Domain/kinematics/: ctrl_kinematics.c  kinematics.c
Driver/src/: drv_stepper.c
Platform/: platform_critical.c  platform_critical.h  platform_delay.c  platform_delay.h
RobotArm/Algorithm/kinematics/: kinematics.c
RobotArm/App/: app_calibration.c  app_gcode_exec.c  app_gcode_parser.c  app_runtime.c  app_teleop.c
RobotArm/App/adapters/: app_isr_adapter.c
RobotArm/App/include/app/: app_calibration.h  app_gcode_exec.h  app_gcode_parser.h  app_runtime_events.h
RobotArm/BSP/driver/include/: bsp_driver_config.h
RobotArm/BSP/driver/include/driver/: drv_stepper.h
RobotArm/BSP/driver/src/: drv_ps2.c  drv_servo.c  drv_stepper.c  drv_tmc2209.c
RobotArm/BSP/include/bsp/: bsp_uart1.h
RobotArm/BSP/src/: bsp_led.c  bsp_uart1.c
RobotArm/Device/include/device/: dev_input.h  dev_joint.h  dev_limit_switch.h
RobotArm/Device/src/: dev_joint.c
RobotArm/Domain/include/common/: error_code.h  robot_config.h
RobotArm/Driver/include/driver/: drv_servo.h  drv_stepper.h
RobotArm/Driver/src/: drv_as5600.c  drv_servo.c
RobotArm/Platform/: platform_time.c  platform_time.h
RobotArm/Service/command/: command_service.c
RobotArm/Service/homing/: svc_homing.c
RobotArm/Service/include/: command_service.h  motion_service.h  motion_types.h  planning_service.h  safety_service.h
RobotArm/Service/include/service/: svc_gripper.h
RobotArm/Service/motion/: motion_service.c
RobotArm/Service/motion/internal/: ctrl_closed_loop.c  ctrl_closed_loop.h  ctrl_compensation.c  ctrl_motion_engine.c  ctrl_motion_engine.h  ctrl_planner.c
RobotArm/Service/planning/: planning_service.c
RobotArm/Service/planning/internal/: ctrl_planner.c
RobotArm/Service/safety/: safety_service.c
Service/command/: command_service.c
Service/control/: ctrl_closed_loop.c  ctrl_compensation.c  ctrl_motion_engine.c  ctrl_planner.c
Service/gripper/: svc_gripper.c
Service/include/: command_service.h  command_types.h  motion_types.h  safety_service.h
Service/include/service/: svc_homing.h
Service/include/service/control/: ctrl_compensation.h
Service/motion/: motion_service.c  motion_service.h
Service/motion/internal/: ctrl_closed_loop.c  ctrl_motion_engine.c
Service/safety/: safety_service.c
Service/state/: state_service.c  state_service.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: architecture.md  data_flow.md  dependency_rules.md  interface_reference.md  naming_conventions.md  serial-protocol.md  service_ownership.md
scripts/: check_architecture_dependencies.py
study/: PROJECT_FLOWCHART.md  PROJECT_MINDMAP.md  PROJECT_STUDY.xmind  PROJECT_SUMMARY.md
tests/: CMakeLists.txt  logic_tests.c  planning_service_tests.c  safety_service_tests.c
